add second dice

--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+#dice-1 {
+  top: 120px;
+}
+#dice-2 {
+  top: 250px;
+}
 
 .final-score {
   position: absolute;
